fix: overflow and height adjustments

--- a/src/pages/registro/styles.css
+++ b/src/pages/registro/styles.css
@@ -5,6 +5,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    overflow-y: auto;
 }
 
 .registerForms{
@@ -18,6 +19,7 @@
     padding-bottom: 60px;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
 
 .header{
